--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "buefy": "^0.6.2",
-    "vee-validate": "^2.0.0",
-    "vue": "^2.5.13",
-    "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "buefy": "^0.6.7",
     "moment": "^2.22.1",
-    "moment-timezone": "^0.5.17"
+    "moment-timezone": "^0.5.21",
+    "vee-validate": "^2.0.9",
+    "vue": "^2.5.17",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.8",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
-    "vue-loader": "^13.6.2",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "vue-loader": "^13.7.3",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.3"
   }
 }
