--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "buefy": "^0.6.7",
+    "keycloak-js": "3.4.3",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.21",
     "npm": "^6.4.1",
