--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "buefy": "^0.8.9",
     "keycloak-js": "3.4.3",
+    "lodash": "^4.17.15",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.21",
     "npm": "^6.4.1",
     "vee-validate": "^2.0.9",
     "vue": "^2.6.10",
+    "vue-lodash": "^2.1.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
