New Keycloak code with token update/refresh.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "@dsb-norge/vue-keycloak-js": "^1.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "buefy": "^0.8.9",
     "keycloak-js": "3.4.3",
     "lodash": "^4.17.15",
