--- a/package.json
+++ b/package.json
@@ -6,11 +6,26 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --host 0.0.0.0 --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "unit": "jest --config test/unit/jest.conf.js",
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src test/unit"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "buefy": "^0.8.9",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
+    "jest": "^22.0.4",
+    "jest-serializer-vue": "^0.3.0",
     "keycloak-js": "3.4.3",
     "lodash": "^4.17.15",
     "moment": "^2.22.1",
@@ -18,6 +33,7 @@
     "npm": "^6.4.1",
     "vee-validate": "^2.0.9",
     "vue": "^2.6.10",
+    "vue-jest": "^1.0.2",
     "vue-lodash": "^2.1.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
